tests/snapshots/examples_fixtures/imports__except__Lib.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/except/Lib.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
