tests/snapshots/examples_fixtures/imports__except__import_except_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/except/import_except_ok.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E011]: Private Member

Cannot access private member `keep`.

  examples/imports/except/import_except_ok.flx:7:11
  |
7 |     print(Lib.keep());
  |           ^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
== stdout ==
<not executed>
